test/fail_compilation/fail6132b.d
// REQUIRED_ARGS: -w

class S
{
    extern(C) int clock();
}
